tests/sksl/errors/ReservedNameAttribute.glsl
### Compilation failed:

error: 1: 'attribute' is a reserved word
1 error
